syntax = "proto3";

package filecopier;

enum CopyStatus {
  UNKNOWN = 0;
  IN_QUEUE = 1;
  IN_PROGRESS = 2;
  COMPLETE = 3;
}

message CopyRequest {
  string input_file = 1;
  string input_server = 2;
  string output_file = 3;
  string output_server = 4;
}

message CopyResponse {
  int64 millis_to_copy = 1;
  CopyStatus status = 2;
  int64 time_in_queue = 3;
  string error = 4;
}

message KeyRequest {
  string key = 1;
  string server = 2;
}

message KeyResponse {}

message AcceptsRequest {}

message AcceptsResponse {
  repeated string server = 1;
}

service FileCopierService {
  rpc QueueCopy(CopyRequest) returns (CopyResponse) {};
  rpc Copy(CopyRequest) returns (CopyResponse) {};
  rpc ReceiveKey(KeyRequest) returns (KeyResponse) {};
  rpc Accepts(AcceptsRequest) returns (AcceptsResponse) {};
}